--- a/index.html
+++ b/index.html
@@ -51,7 +51,12 @@
     <div class="container my-3">
       <h1>Welcome To My Notes</h1>
       <div class="card">
+   
         <div class="card-body">
+          <div class="mb-3">
+            <h5 class="card-title">Add Title</h5>
+            <input type="text" class="form-control" id="addTitle" aria-describedby="title" placeholder="Enter Title">
+          </div>
           <h5 class="card-title">Write A Note</h5>
           <div class="mb-3">
             <textarea class="form-control" id="addText" rows="3"></textarea>
